# pycon-lazy-evaluation-generators

./: .gitignore  pyproject.toml
lazy_evaluation/: generator_comprehension.py  my_custom_range_generator.py
lazy_evaluation/benchmarking/eager_evaluation/: memory_effitiency.py  performance_optimization.py
lazy_evaluation/benchmarking/lazy_evaluation/: memory_effitiency.py  performance_optimization.py
lazy_evaluation/examples/infinite_sequence/: infinite_sequence.py  infinite_sequence_eager.py  temperature_sensor_mock.py  test.py
lazy_evaluation/examples/large_data_set_processing/: large_data_set.py  large_data_set_eager.py
