[tool.poetry]
name = "lazy-evaluation"
version = "0.1.0"
description = ""
authors = ["Sebas Arias <sebasarias95@gmail.com>"]
readme = "README.md"
packages = [{include = "lazy_evaluation"}]

[tool.poetry.dependencies]
python = "^3.11"
line-profiler = "^4.1.1"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
